<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.mainpage.SignInFragment">


    <ImageView
        android:id="@+id/unim_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:src="@drawable/ic_unim_main_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sign_in_with_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_48sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:background="@drawable/roundy_sign_button_border_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unim_logo">

        <ImageView
            android:id="@+id/sign_in_google_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24sdp"
            android:src="@drawable/ic_google_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_in_google_text"
            style="@style/Unim_Text_18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@color/stroke_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/sign_in_with_google"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Unim_Text_18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="or"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_with_google" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@color/stroke_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_with_google"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_with_email"
        style="@style/Unim_Main_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/sign_in_with_email"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_with_google"
        app:layout_constraintStart_toStartOf="@+id/sign_in_with_google"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/sign_in_dont_have_account"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_with_email"
        app:layout_constraintStart_toStartOf="@+id/sign_in_with_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_with_email" />

    <TextView
        android:id="@+id/sign_up"
        style="@style/Unim_Text_24sp_Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_with_email"
        app:layout_constraintStart_toStartOf="@+id/sign_in_with_email"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>