<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TextView
        android:id="@+id/close"
        style="@style/Unim_Text_18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:text="@string/tag_students"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/clear_all"
        style="@style/Unim_Text_H6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center"
        android:text="@string/clear_all"
        app:layout_constraintBottom_toBottomOf="@+id/done_button"
        app:layout_constraintEnd_toStartOf="@+id/done_button"
        app:layout_constraintTop_toTopOf="@+id/done_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_button"
        style="@style/Unim_Round_Button_Small"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="4dp"
        android:text="@string/done"
        android:textSize="@dimen/text_size_16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:alpha="0.3"
        android:background="@color/unim_secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tagged_peers_title"
                style="@style/Unim_Text_14sp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/tagged_peers"
                android:textColor="@color/stroke_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tagged_peers_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@+id/tagged_peers_title"
                app:layout_constraintStart_toStartOf="@+id/tagged_peers_title"
                app:layout_constraintTop_toBottomOf="@+id/tagged_peers_title" />

            <TextView
                android:id="@+id/recents_title"
                style="@style/Unim_Text_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/tagged_peers"
                android:textColor="@color/stroke_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagged_peers_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recents_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@+id/tagged_peers_title"
                app:layout_constraintStart_toStartOf="@+id/tagged_peers_title"
                app:layout_constraintTop_toBottomOf="@+id/recents_title" />

            <TextView
                android:id="@+id/peers_title"
                style="@style/Unim_Text_14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/tagged_peers"
                android:textColor="@color/stroke_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recents_list" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/peers_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@+id/tagged_peers_title"
                app:layout_constraintStart_toStartOf="@+id/tagged_peers_title"
                app:layout_constraintTop_toBottomOf="@+id/peers_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>