<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_8sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feed_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/profile_image"
            app:layout_constraintBottom_toBottomOf="@+id/feed_date"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_name" />

        <TextView
            android:id="@+id/user_name"
            style="@style/Unim_Text_14sp_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:maxLines="1"
            android:text="Idrak Atakisili"
            app:layout_constraintEnd_toStartOf="@+id/feed_menu"
            app:layout_constraintStart_toEndOf="@+id/user_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_speciality"
            style="@style/Unim_Text_10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Mellimlik * Nesimi Bazari"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <TextView
            android:id="@+id/feed_date"
            style="@style/Unim_Text_10sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:alpha="0.5"
            android:text="19 Aug"
            android:textColor="@color/stroke_color"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_speciality" />

        <ImageView
            android:id="@+id/feed_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_4sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="0dp"
            android:paddingBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/feed_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_feed_end_menu" />

        <TextView
            android:id="@+id/with_title"
            style="@style/Unim_Text_H6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:alpha="0.5"
            android:text="@string/with_feed"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/user_image"
            app:layout_constraintTop_toBottomOf="@+id/feed_date" />

        <TextView
            android:id="@+id/with_users"
            style="@style/Unim_Text_H6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="Tural Salmanov and more"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/with_title"
            app:layout_constraintStart_toEndOf="@+id/with_title"
            app:layout_constraintTop_toTopOf="@+id/with_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/feed_content"
        style="@style/Unim_Text_H6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="Azeri prikol Dunyada en lazımlı pese Nesimi bazari . Ticarət mərkəzləri yanir yoxsa yandırılır ?
-ne siqaret ?"
        android:textColor="@color/unim_secondary_color"
        app:layout_constraintTop_toBottomOf="@+id/feed_header" />

    <LinearLayout
        android:id="@+id/resource_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_content" />

    <LinearLayout
        android:id="@+id/reactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/resource_layout">

        <com.unimapp.uitoolkit.reaction.ReactionView
            android:id="@+id/reaction_view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_16sdp" />

        <TextView
            android:id="@+id/reaction_users"
            style="@style/Unim_Text_10sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="Tural Salmanov, Idrak Atakishili and 10 others" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/feed_divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reactions" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/reaction_action"
            style="@style/Unim_Text_14sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:text="@string/reaction_star"
            android:textColor="@color/unim_main_color"
            app:drawableStartCompat="@drawable/ic_reaction_star" />

        <TextView
            android:id="@+id/comment_action"
            style="@style/Unim_Text_14sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:text="@string/reaction_comment"
            android:textColor="@color/stroke_color_alpha40"
            app:drawableStartCompat="@drawable/ic_reaction_comment" />

        <TextView
            android:id="@+id/spread_action"
            style="@style/Unim_Text_14sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:text="@string/reaction_spread"
            android:textColor="@color/stroke_color_alpha40"
            app:drawableStartCompat="@drawable/ic_reaction_spread" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>